<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:id="@+id/content_main"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="imsreenadh.samsaaram.MainActivity"
    tools:showIn="@layout/activity_main">

    <TextView
        android:id="@+id/message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingEnd="@dimen/activity_vertical_margin"
        android:paddingStart="@dimen/activity_horizontal_margin"
        android:text="@string/start_message"
        android:textStyle="bold"
        android:paddingRight="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin" />


    <!-- RED IMAGE BUTTON -->
    <ImageButton
        android:id="@+id/samsaaramRedIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="@null"
        android:clickable="true"
        android:contentDescription="@string/stop_recognition_button"
        android:onClick="onSamsaaramStopIconClicked"
        android:src="@drawable/samsaaram_icon_touched" />

    <!-- VIOLET IMAGE BUTTON -->
    <ImageButton
        android:id="@+id/samsaaramVioletIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="@null"
        android:clickable="true"
        android:contentDescription="@string/start_recognition_button"
        android:onClick="onSamsaaramStartIconClicked"
        android:src="@drawable/samsaaram_icon" />

    <TextView
        android:id="@+id/result_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/samsaaramRedIcon"
        android:padding="8dp"
        android:text="@string/empty_textView"
        android:textColor="@color/resultText"
        android:textIsSelectable="true"
        android:layout_alignParentLeft="true" />

    <TextView
        android:id="@+id/caption_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/result_text"
        android:layout_toEndOf="@+id/result_text"
        android:padding="5dp"
        android:text="@string/empty_textView"
        android:textColor="@color/captionText"
        android:layout_toRightOf="@+id/result_text" />
</RelativeLayout>
