<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="imsreenadh.samsaaram.FeedbackActivity">

    <TextView
        android:id="@+id/feedbackTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:paddingEnd="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingStart="@dimen/activity_vertical_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:text="@string/provide_feedback"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/feedbackTextView">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.rey.material.widget.EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/e_mail"
                android:inputType="textEmailAddress"
                android:paddingEnd="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingStart="@dimen/activity_vertical_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:textSize="18sp"
                app:et_dividerColor="@color/colorAccent"
                app:et_dividerHeight="1.5dp"
                app:et_dividerPadding="4dp"
                app:et_labelEnable="true"
                app:et_labelTextColor="@color/colorAccent"
                app:et_labelTextSize="12sp"
                app:et_supportMode="none" />

            <com.rey.material.widget.EditText
                android:id="@+id/feedbackText"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_below="@id/email"
                android:hint="@string/suggestion"
                android:inputType="textMultiLine"
                android:paddingEnd="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingStart="@dimen/activity_vertical_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:textSize="18sp"
                app:et_autoCompleteMode="multi"
                app:et_dividerColor="@color/colorAccent"
                app:et_dividerHeight="1.5dp"
                app:et_dividerPadding="4dp"
                app:et_labelEnable="true"
                app:et_labelTextColor="@color/colorAccent"
                app:et_labelTextSize="12sp"
                app:et_supportMode="none" />

            <com.rey.material.widget.Button
                style="@style/Material.Drawable.Ripple.Wave.Light"
                android:layout_width="wrap_content"
                android:id="@+id/btnFeedback"
                android:layout_height="wrap_content"
                android:layout_alignEnd="@+id/feedbackText"
                android:layout_alignRight="@+id/feedbackText"
                android:layout_below="@+id/feedbackText"
                android:layout_marginEnd="@dimen/activity_vertical_margin"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_marginStart="@dimen/activity_vertical_margin"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:padding="16dp"
                android:text="@string/send_feedback"
                android:textSize="16sp"
                app:rd_delayClick="untilRelease"
                app:rd_enable="true"
                app:rd_padding="5dp"
                app:rd_rippleColor="@color/colorAccent"
                app:rd_rippleAnimDuration="500"/>
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>
